charts/ebook2audiobook/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eb2ab
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - eb2ab.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: eb2ab
      namespace: eb2ab
      port: 7860
